<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_card">Cartão de visitas</string>
    <string name="btn_label_description_new_card">Novo Cartão</string>
    <string name="hint_name">Nome</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_email_address">E-mail</string>
    <string name="hint_name_business">Empresa</string>
    <string name="hint_color">Cor</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="cd_image_close">Ícone com a letra X para fechar a tela</string>
    <string name="cd_button_add">"Botão com um ícone de mais para adicionar um novo cartão "</string>
    <string name="label_show_success">Cartão cadastrado com sucesso</string>
    <string name="label_share">Compartilhar</string>
    <string name="label_select_color">Selecione a cor do cartão</string>
    <string name="cd_image_color">Imagem quadrada com a cor de fundo selecionada pelo usuário</string>
    <string name="error_input_phone">Digite um telefone</string>
    <string name="error_input_email">Digite um email</string>
    <string name="error_input_email_invalid">E-mail inválido</string>
    <string name="error_input_name_business">Digite um nome para empresa</string>
    <string name="error_input_name">Digite um nome</string>
</resources>